增加背景特效

--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -7,4 +7,8 @@
     left: 0;
     right: 0;
     margin: auto auto;
+    background-color: white;
+}
+.login-panle input{
+	background-color: transparent;
 }
