--- a/WebContent/css/login.css
+++ b/WebContent/css/login.css
@@ -1,3 +1,11 @@
+/*@font-face {
+    font-family: myfont;
+    src:url('../font/nzz.ttf');
+}*/
+*{
+	font-family: myfont;
+	font-size:1.05em;
+}
 .login-panle{
 	width: fit-content;
     height: fit-content;
@@ -9,6 +17,21 @@
     margin: auto auto;
     background-color: white;
 }
+.login-panle .loginbtn{
+	text-align: center;
+    font-size: 1rem;
+    margin: 0px 1rem;
+    position: absolute;
+    bottom: 1rem;
+    left: 0;
+    right: 0;
+}
 .login-panle input{
 	background-color: transparent;
+}
+.login-panle .logincard{
+	width: 25rem;
+    height: 30rem;
+    text-align: center;
+    padding:0.3rem;
 }
