--- a/src/main/webapp/WEB-INF/view/index.html
+++ b/src/main/webapp/WEB-INF/view/index.html
@@ -14,7 +14,7 @@
 <div>
     <a th:href="@{/signup}">signup</a>
     <a th:href="@{/login}">login</a>
-    <a th:href="@{/lastest}">lastest</a>
+    <a th:href="@{/latest}">latest</a>
 </div>
 </body>
 </html>
