--- a/src/main/webapp/WEB-INF/view/spittrviews/index.html
+++ b/src/main/webapp/WEB-INF/view/spittrviews/index.html
@@ -15,6 +15,7 @@
     <a th:href="@{/signup}">signup</a>
     <a th:href="@{/login}">login</a>
     <a th:href="@{/latest}">latest</a>
+    <a th:href="@{/fileupload}">fileupload</a>
 </div>
 </body>
 </html>
