--- a/src/main/webapp/WEB-INF/view/spittrviews/index.html
+++ b/src/main/webapp/WEB-INF/view/spittrviews/index.html
@@ -16,6 +16,7 @@
     <a th:href="@{/login}">login</a>
     <a th:href="@{/latest}">latest</a>
     <a th:href="@{/fileupload}">fileupload</a>
+    <a th:href="@{/spittr}">new spittr</a>
 </div>
 </body>
 </html>
