:speech_balloon: Updating text and literals.

--- a/src/main/webapp/WEB-INF/view/spittrviews/spittrinfo.html
+++ b/src/main/webapp/WEB-INF/view/spittrviews/spittrinfo.html
@@ -32,7 +32,7 @@
         </tr>
         <tr>
             <td>附件</td>
-            <td><input style="width: auto" th:readonly="${view}"
+            <td><input style="width: auto" th:disabled="${view}"
                        th:name="file" th:value="选择文件"
                        type="file"/></td>
         </tr>
