--- a/src/main/webapp/WEB-INF/view/spittrviews/index.html
+++ b/src/main/webapp/WEB-INF/view/spittrviews/index.html
@@ -12,7 +12,7 @@
 <body>
 <h6>Welcome to Thymeleaf</h6>
 <div>
-    <a th:href="@{/signup}">signup</a>
+    <a th:href="@{/user}">signup</a>
     <a th:href="@{/login}">login</a>
     <a th:href="@{/latest}">latest</a>
     <a th:href="@{/fileupload}">fileupload</a>
