异常处理，结构优化，用户注册和登录，控制器通知

--- a/src/main/webapp/WEB-INF/view/index.html
+++ b/src/main/webapp/WEB-INF/view/index.html
@@ -12,11 +12,11 @@
 <body>
 <h6>Welcome to Thymeleaf</h6>
 <div>
-    <a th:href="@{/user}">signup</a>
-    <a th:href="@{/login}">login</a>
-    <a th:href="@{/latest}">latest</a>
-    <a th:href="@{/fileupload}">fileupload</a>
-    <a th:href="@{/spittr}">new spittr</a>
+    <a th:href="@{/user/signup}">signup</a>
+    <a th:href="@{/user/login}">login</a>
+    <a th:href="@{/spittr}">latest</a>
+    <a th:href="@{/spittr/fileupload}">fileupload</a>
+    <a th:href="@{/spittr/new}">new spittr</a>
 </div>
 </body>
 </html>
