配置Spring security不起作用

--- a/src/main/webapp/WEB-INF/view/login.html
+++ b/src/main/webapp/WEB-INF/view/login.html
@@ -8,14 +8,14 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
     <link rel="shortcut icon" th:href="@{/favicon.ico}"/>
-    <link rel="stylesheet" th:href="@{layui/css/layui.css}" type="text/css">
-    <link rel="stylesheet" th:href="@{css/sweetalert.css}" type="text/css"/>
-    <script th:src="@{javascript/sweetalert-dev.js}"></script>
-    <script th:src="@{layui/layui.all.js}"></script>
-    <script th:src="@{javascript/jquery_3.3.1.js}"></script>
+    <link rel="stylesheet" th:href="@{/layui/css/layui.css}" type="text/css">
+    <link rel="stylesheet" th:href="@{/css/sweetalert.css}" type="text/css"/>
+    <script th:src="@{/javascript/sweetalert-dev.js}"></script>
+    <script th:src="@{/layui/layui.all.js}"></script>
+    <script th:src="@{/javascript/jquery_3.3.1.js}"></script>
     <style type="text/css">
         table td {
-            padding: 0.5rem;
+            padding: 0.6rem;
         }
     </style>
 
