--- a/src/main/webapp/WEB-INF/view/index.html
+++ b/src/main/webapp/WEB-INF/view/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"><!-- 声明Thymeleaf的命名空间 -->
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+      xmlns:th="http://www.thymeleaf.org"><!-- 声明Thymeleaf的命名空间 -->
 <head>
     <meta charset="UTF-8">
     <meta content="webkit" name="renderer">
@@ -11,12 +13,16 @@
 
 <body>
 <h6>Welcome to Thymeleaf</h6>
+<div sec:authorize="isAuthenticated()">
+    Hello <span sec:authentication="name">someone</span>
+</div>
 <div>
     <a th:href="@{/user/signup}">signup</a>
     <a th:href="@{/user/login}">login</a>
     <a th:href="@{/spittr}">latest</a>
     <a th:href="@{/spittr/fileupload}">fileupload</a>
     <a th:href="@{/spittr/new}">new spittr</a>
+    <a th:href="@{/user/logout}">new spittr</a>
 </div>
 </body>
 </html>
