解决依赖的包版本对不上导致的thymeleaf的security方言报错

--- a/src/main/webapp/WEB-INF/view/index.html
+++ b/src/main/webapp/WEB-INF/view/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity5"
       xmlns:th="http://www.thymeleaf.org"><!-- 声明Thymeleaf的命名空间 -->
 <head>
     <meta charset="UTF-8">
@@ -22,7 +22,7 @@
     <a th:href="@{/spittr}">latest</a>
     <a th:href="@{/spittr/fileupload}">fileupload</a>
     <a th:href="@{/spittr/new}">new spittr</a>
-    <a th:href="@{/user/logout}">new spittr</a>
+    <a th:href="@{/user/logout}">logout</a>
 </div>
 </body>
 </html>
