去除一些不必要的警告

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,6 +16,11 @@
 <div sec:authorize="isAuthenticated()">
 	Hello <span sec:authentication="name">someone</span>
 </div>
+<div sec:authorize="isAuthenticated()">
+	<ul th:each="obj,state:${#authentication.getAuthorities()}">
+		<li><span th:text="${obj.getAuthority()}"></span></li>
+	</ul>
+</div>
 <div>
 	<ul>
 		<li sec:authorize="not isAuthenticated()"><a th:href="@{/user/signup}">signup</a></li>
