--- a/src/main/resources/static/sa-resources/login.css
+++ b/src/main/resources/static/sa-resources/login.css
@@ -233,11 +233,10 @@ input::-ms-clear {
 
 h1 {
     /* margin:80px auto 50px; */
-    margin: 0;
     padding: 80px auto 50px;;
     text-align: center;
     color: #fff;
-    margin-left: -25px;
+    margin: 0 0 0 -25px;
     font-size: 35px;
     font-weight: 700;
     text-shadow: 0 1px 1px #555
